@@ -2,8 +2,9 @@
 
 	[kennykb-numerics-branch]
 
-	* generic/tclExecute.c:	Improved performance INST_MULT and
-	replaces a "goto... label" with a "break from loop" in TclIncrObj().
+	* generic/tclExecute.c:	Improved performance of INST_MULT and INST_DIV
+	and replaced a "goto... label" with a "break from loop" in TclIncrObj()
+	and removed some dead code.
 
 2005-10-04  Don Porter  <dgp@users.sourceforge.net>
 
